log
Thu 16 May 2024 04:18:20 PM UTC: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:68:23: error: ‘y’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   68 |       adj->sudo[x][y] = i;
      |       ~~~~~~~~~~~~~~~~^~~
sudoku.c:68:23: error: ‘x’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
cc1: all warnings being treated as errors
Compilation failed
57680f3
Thu 16 May 2024 04:19:58 PM UTC: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
0853ea1
Thu 16 May 2024 04:22:21 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
60aa30f
Thu 16 May 2024 04:28:48 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:13: error: ‘i0’ undeclared (first use in this function); did you mean ‘i’?
   59 |             i0 = i;
      |             ^~
      |             i
sudoku.c:59:13: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:60:13: error: ‘j0’ undeclared (first use in this function); did you mean ‘j’?
   60 |             j0 = j;
      |             ^~
      |             j
Compilation failed
6865ac5
Thu 16 May 2024 04:29:02 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:55:14: error: redefinition of ‘i0’
   55 |    int i0=-1,i0=-1;
      |              ^~
sudoku.c:55:8: note: previous definition of ‘i0’ with type ‘int’
   55 |    int i0=-1,i0=-1;
      |        ^~
sudoku.c:60:13: error: ‘j0’ undeclared (first use in this function); did you mean ‘j’?
   60 |             j0 = j;
      |             ^~
      |             j
sudoku.c:60:13: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:66:7: error: ‘x’ undeclared (first use in this function)
   66 |    if(x!=-1&&y!=-1){
      |       ^
sudoku.c:66:14: error: ‘y’ undeclared (first use in this function)
   66 |    if(x!=-1&&y!=-1){
      |              ^
Compilation failed
2db4c90
Thu 16 May 2024 04:29:14 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
8d8aaca
Thu 16 May 2024 04:32:26 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
test.c: In function ‘get_adj_nodes’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
40e3159
Thu 16 May 2024 04:32:55 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c: In function ‘get_adj_nodes’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
23db147
Thu 16 May 2024 04:33:30 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 15/70
68c4928
Thu 16 May 2024 04:37:03 PM UTC: 
 sudoku.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
e5dd802
Thu 16 May 2024 04:53:35 PM UTC: 
 sudoku.c | 68 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 67 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_validFilas’:
sudoku.c:60:19: error: expected expression before ‘{’ token
   60 |         array[10]={0,0,0,0,0,0,0,0,0,0};
      |                   ^
sudoku.c: In function ‘is_validColumnas’:
sudoku.c:79:19: error: expected expression before ‘{’ token
   79 |         array[10]={0,0,0,0,0,0,0,0,0,0};
      |                   ^
sudoku.c: In function ‘is_validSubmatrices’:
sudoku.c:97:21: error: expected expression before ‘{’ token
   97 |             array = {0,0,0,0,0,0,0,0,0,0};
      |                     ^
sudoku.c:109:21: error: expected expression before ‘{’ token
  109 |             array = {0,0,0,0,0,0,0,0,0,0};
      |                     ^
sudoku.c:121:21: error: expected expression before ‘{’ token
  121 |             array = {0,0,0,0,0,0,0,0,0,0};
      |                     ^
Compilation failed
94be953
Thu 16 May 2024 04:57:47 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_validFilas’:
sudoku.c:60:16: error: expected expression before ‘{’ token
   60 |         array= {0,0,0,0,0,0,0,0,0,0};
      |                ^
sudoku.c: In function ‘is_validColumnas’:
sudoku.c:79:19: error: expected expression before ‘{’ token
   79 |         array[10]={0,0,0,0,0,0,0,0,0,0};
      |                   ^
sudoku.c: In function ‘is_validSubmatrices’:
sudoku.c:97:21: error: expected expression before ‘{’ token
   97 |             array = {0,0,0,0,0,0,0,0,0,0};
      |                     ^
sudoku.c:109:21: error: expected expression before ‘{’ token
  109 |             array = {0,0,0,0,0,0,0,0,0,0};
      |                     ^
sudoku.c:121:21: error: expected expression before ‘{’ token
  121 |             array = {0,0,0,0,0,0,0,0,0,0};
      |                     ^
Compilation failed
d545b59
Thu 16 May 2024 04:58:47 PM UTC: 
 sudoku.c | 15 ++++++++-------
 1 file changed, 8 insertions(+), 7 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_validFilas’:
sudoku.c:60:20: error: expected expression before ‘{’ token
   60 |         array[10]= {0,0,0,0,0,0,0,0,0,0};
      |                    ^
sudoku.c: In function ‘is_validColumnas’:
sudoku.c:79:19: error: expected expression before ‘{’ token
   79 |         array[10]={0,0,0,0,0,0,0,0,0,0};
      |                   ^
sudoku.c: In function ‘is_validSubmatrices’:
sudoku.c:89:25: error: expected expression before ‘{’ token
   89 |             array[10] = {0,0,0,0,0,0,0,0,0,0};
      |                         ^
sudoku.c:102:25: error: expected expression before ‘{’ token
  102 |             array[10] = {0,0,0,0,0,0,0,0,0,0};
      |                         ^
sudoku.c:114:25: error: expected expression before ‘{’ token
  114 |             array[10] = {0,0,0,0,0,0,0,0,0,0};
      |                         ^
Compilation failed
b3785fc
Thu 16 May 2024 05:09:16 PM UTC: 
 sudoku.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_validColumnas’:
sudoku.c:78:19: error: expected expression before ‘{’ token
   78 |         array[10]={0,0,0,0,0,0,0,0,0,0};
      |                   ^
sudoku.c: In function ‘is_validSubmatrices’:
sudoku.c:88:23: error: expected expression before ‘{’ token
   88 |             array[10]={0,0,0,0,0,0,0,0,0,0};
      |                       ^
sudoku.c:101:23: error: expected expression before ‘{’ token
  101 |             array[10]={0,0,0,0,0,0,0,0,0,0};
      |                       ^
sudoku.c:113:23: error: expected expression before ‘{’ token
  113 |             array[10]={0,0,0,0,0,0,0,0,0,0};
      |                       ^
Compilation failed
e770be4
Thu 16 May 2024 05:11:15 PM UTC: 
 sudoku.c | 40 ++++++++++------------------------------
 1 file changed, 10 insertions(+), 30 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_validSubmatrices’:
sudoku.c:88:44: error: expected ‘;’ before ‘for’
   88 |             memset(array, 0, sizeof(array))
      |                                            ^
      |                                            ;
   89 |             for(i=fila;i<fila+3;i++){
      |             ~~~                             
sudoku.c:85:11: error: unused variable ‘j’ [-Werror=unused-variable]
   85 |     int i,j;
      |           ^
sudoku.c:85:9: error: unused variable ‘i’ [-Werror=unused-variable]
   85 |     int i,j;
      |         ^
cc1: all warnings being treated as errors
Compilation failed
c07bf20
Thu 16 May 2024 05:11:33 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
c7c63b6
Thu 16 May 2024 05:13:15 PM UTC: 
 sudoku.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:130:13: error: implicit declaration of function ‘isValid’; did you mean ‘is_valid’? [-Werror=implicit-function-declaration]
  130 |          if(isValid(adj))
      |             ^~~~~~~
      |             is_valid
cc1: all warnings being treated as errors
Compilation failed
4cb1a3b
